fix position of repo link

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-    <meta name="viewport" content="width=600, initial-scale=1.0" />
-    <title>Neko Mezashi Attack 4KB Zen ver</title>
-  </head>
-  <body>
-    <!-- 
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+  <meta name="viewport" content="width=600, initial-scale=1.0" />
+  <title>Neko Mezashi Attack 4KB Zen ver</title>
+</head>
+
+<body>
+  <!-- 
     Welcome to Neko Mezashi Attack 4KB Zen ver.
 
     'Neko Mezashi Attack' is a simple but cute action game made with Vite and TypeScript.
@@ -21,8 +23,12 @@
     contact: https://twitter.com/yuneco 
     -->
 
+  <div style="position: relative; top: 670px; user-select: none; -webkit-user-select: none;">
     <a href="https://github.com/yuneco/mezashi-4kb">Check source on Github</a>
     <a href="https://twitter.com/yuneco ">@yuneco</a>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+  </div>
+
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
