avoid zoom when dbl tap on Safari

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-  <meta name="viewport" content="width=600, initial-scale=1.0" />
+  <meta name="viewport" content="width=620" />
   <title>Neko Mezashi Attack 4KB Zen ver</title>
 </head>
 
@@ -23,7 +23,7 @@
     contact: https://twitter.com/yuneco 
     -->
 
-  <div style="position: relative; top: 670px; user-select: none; -webkit-user-select: none;">
+  <div style="position: relative; top: 700px; color:#766; user-select: none; -webkit-user-select: none;">
     <a href="https://github.com/yuneco/mezashi-4kb">Check source on Github</a>
     <a href="https://twitter.com/yuneco ">@yuneco</a>
   </div>
