Refactoring and add comments

--- a/index.html
+++ b/index.html
@@ -9,23 +9,22 @@
 </head>
 
 <body>
-  <!-- 
-    Welcome to Neko Mezashi Attack 4KB Zen ver.
+<!-- 
+Welcome to Neko Mezashi Attack 4KB Zen ver.
 
-    'Neko Mezashi Attack' is a simple but cute action game made with Vite and TypeScript.
-    This app is packed all resources including style, graphics and audio into 4KB(4096 chars) JS.
-    No runtime libraries or external resources are required.
+'Neko Mezashi Attack' is a simple but cute action game made with Vite and TypeScript.
+This app is packed all resources including style, graphics and audio into 4KB(4096 chars) JS.
+No runtime libraries or external resources are required.
 
-    You can see orginal (unpacked) TypeScript code at the following repo:
+You can see orginal (unpacked) TypeScript code at the following repo:
+https://github.com/yuneco/mezashi-4kb
 
-    https://github.com/yuneco/mezashi-4kb
+contact: https://twitter.com/yuneco 
+-->
 
-    contact: https://twitter.com/yuneco 
-    -->
-
-  <div style="position: relative; top: 700px; color:#766; user-select: none; -webkit-user-select: none;">
-    <a href="https://github.com/yuneco/mezashi-4kb">Check source on Github</a>
-    <a href="https://twitter.com/yuneco ">@yuneco</a>
+  <div style="position: relative; top: 700px; user-select: none; -webkit-user-select: none;">
+    <a style="color:#766;" href="https://github.com/yuneco/mezashi-4kb">Check source on Github</a>
+    <a style="color:#766;" href="https://twitter.com/yuneco ">@yuneco</a>
   </div>
 
   <script type="module" src="/src/main.ts"></script>
