--- a/index.html
+++ b/index.html
@@ -5,7 +5,21 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <meta name="viewport" content="width=620" />
-  <title>Neko Mezashi Attack 4KB Zen ver</title>
+  <meta name="Description" content="Simple & cute browser action game. All programs and resources are packed under 4KB.">
+  <meta property="og:title" content="Neko🐱Mezashi🐟Attack🌟4KB">
+  <meta property="og:image" content="https://yuneco.github.io/mezashi-4kb/ogp2.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:description" content="Simple & cute browser action game. All programs and resources are packed under 4KB.">
+  <meta property="og:url" content="https://yuneco.github.io/mezashi-4kb/">
+  <meta property="og:site_name" content="Neko🐱Mezashi🐟Attack🌟4KB">
+  <meta property="og:type" content="website">
+  <meta name="twitter:site" content="https://yuneco.github.io/mezashi-4kb/">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Neko🐱Mezashi🐟Attack🌟4KB">
+  <meta name="twitter:image" content="https://yuneco.github.io/mezashi-4kb/ogp2.png">
+  <meta name="twitter:description" content="Simple & cute browser action game. All programs and resources are packed under 4KB.">
+  <title>Neko Mezashi Attack 4KB ver</title>
 </head>
 
 <body>
@@ -16,8 +30,25 @@ Welcome to Neko Mezashi Attack 4KB Zen ver.
 This app is packed all resources including style, graphics and audio into 4KB(4096 chars) JS.
 No runtime libraries or external resources are required.
 
-You can see orginal (unpacked) TypeScript code at the following repo:
+You can see orginal (unpacked) TypeScript code at the following repo.
 https://github.com/yuneco/mezashi-4kb
+
+Need more compressed? see
+https://yuneco.github.io/mezashi-4kb/packed.html
+
+----
+ネコメザシアタックはブラウザーで遊べるゆるふわなアクションゲームです。
+このページのヘッダーから読み込まれる4KBのJavaScriptに画像やサウンドを含む全てのゲームが含まれています。
+ランタイムのライブラリや外部リソースは一切使用していません。
+
+もっと極限まで圧縮したい方は：
+https://yuneco.github.io/mezashi-4kb/packed.html
+へどうぞ
+
+圧縮前のTypeScriptのソースコードは下記リポジトリで公開しています：
+https://github.com/yuneco/mezashi-4kb
+
+----
 
 contact: https://twitter.com/yuneco 
 -->
